<resources>
    <string name="app_name">Rock Lock</string>
    <string name="player_announce">Rock Lock Player</string>
    <string name="previous_artist">Previous Artist</string>
    <string name="previous_album">Previous Album</string>
    <string name="next_artist">Next Artist</string>
    <string name="next_album">Next Album</string>
    <string name="previous_track">Previous Track</string>
    <string name="next_track">Next Track</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="next">Next</string>
    <string name="tap_to_play">Tap To Play</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="genres">Genres</string>
    <string name="songs">Songs</string>
    <string name="directories">Directories</string>
    <string name="playlists">Playlists</string>
    <string name="add_to_playlist">Add To Playlist</string>
    <string name="new_playlist">New Playlist</string>
    <string name="enter_playlist_name">Enter Playlist Name</string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="delete_playlist_confirm">Are You Sure You Want to Delete this Playlist?</string>
    <string name="no_playlists">No playlists found</string>
    <string name="new_playlist_instruct">Swipe right to create a new playlist</string>
    <string name="ok">OK</string>
    <string name="added">Added</string>
    <string name="saved">Saved</string>
    <string name="saving">Saving</string>
    <string name="playlist_instructions">Tap to add. Double tap to save.</string>
    <string name="playlist_nav_instructions">Tap to play. Draw circle to scroll playlist tracks.</string>
    <string name="playlist_cancelled">Playlist Cancelled</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="add_bookmark">Bookmark</string>
    <string name="delete_bookmark">Delete Bookmark</string>
    <string name="delete_bookmark_confirm">Are You Sure You Want to Delete this Bookmark?</string>
    <string name="no_bookmarks">No bookmarks found</string>
    <string name="new_bookmark_instruct">When listening to a track, swipe towards the bottom right corner to bookmark the current time.</string>
    <string name="searching">Searching:</string>
    <string name="no_results">No Results Found</string>
    <string name="playing">Playing %1$s</string>
    <string name="paused">Paused</string>
    <string name="toggle_shuffle">Toggle Shuffle</string>
    <string name="shuffle_on">Shuffle On</string>
    <string name="shuffle_off">Shuffle Disabled</string>
    <string name="mode">Mode</string>
    <string name="period">Period</string>
    <string name="question_mark">Question Mark</string>
    <string name="exclamation_point">Exclamation Point</string>
    <string name="comma">Comma</string>
    <string name="backspace">Backspace</string>
    <string name="use_as_prelock">Use as pre-lock</string>
    <string name="lock_on_summary">Rock Lock will be displayed before your lockscreen is shown. If you do not have a lock pattern, Rock Lock will act as your lockscreen.</string>
    <string name="lock_off_summary">Rock Lock will have no effect on your lockscreen.</string>
    <string name="verbose_mode">Verbose Mode</string>
    <string name="verbose_on_summary">Rock Lock will speak audio previews with each gesture.</string>
    <string name="verbose_off_summary">Rock Lock will not interrupt playback with audio previews.</string>
    <string name="browse_mode">Browse Gesture</string>
    <string name="browse_on_summary">Use two fingers to browse groups and tracks (and tap to play). Use one finger to play new groups and tracks.</string>
    <string name="browse_off_summary">Use one finger to browse groups and tracks (and tap to play). Use two fingers to play new groups and tracks.</string>
    <string-array name="articles_to_ignore">
        <item>the</item>
        <item>an</item>
        <item>a</item>
    </string-array>
    <string name="help">Help</string>
</resources>